Updated the swagger documentation with the recent changes to download zip folder
